--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# Ajouter un .env ici tu comprendras tkt
+# Le fichier secret super secret vraiment très secret
+secret_data.env
 
 # User-specific stuff:
 .idea/**/workspace.xml
